--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,12 @@ spring:
         initialization-mode: always
         schema: schema.sql
         data: data.sql
+    jpa:
+        hibernate:
+            ddl-auto: none
+        properties:
+            hibernate:
+                format_sql: true
+logging:
+    level:
+        ROOT: INFO
