--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,12 @@ spring:
         schema: schema.sql
         data: data.sql
     jpa:
+        show-sql: true
         hibernate:
             ddl-auto: none
         properties:
             hibernate:
-                format_sql: true
+                format_sql: false
 logging:
     level:
         ROOT: INFO
