--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,12 @@
 spring:
-    datasource:
-        url: jdbc:mysql://localhost:3306/web?useUnicode=true&serverTimezone=UTC
-        user: root
-        password: root
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        initialization-mode: always
-        schema: schema.sql
-        data: data.sql
-    jpa:
-        show-sql: true
-        hibernate:
-            ddl-auto: none
-        properties:
-            hibernate:
-                format_sql: false
+    data:
+        mongodb:
+            database: library
+            #authentication-database: admin
+            #username: root
+            #password: root
+            port: 27017
+            host: localhost
 logging:
     level:
         ROOT: INFO
