--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.github.mongobee</groupId>
-			<artifactId>mongobee</artifactId>
-			<version>0.13</version>
+			<groupId>com.github.cloudyrock.mongock</groupId>
+			<artifactId>mongock-spring</artifactId>
+			<version>2.0.2</version>
 		</dependency>
 
 		<dependency>
@@ -48,9 +48,6 @@
 			<artifactId>spring-shell-starter</artifactId>
 			<version>2.0.1.RELEASE</version>
 		</dependency>
-
-
-
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
